# remote

./: .gitignore  .gitmodules
box/: bottom.py  displayspacer.py  joystickcover.py  joystickspacer.py  nrfmount.py  outline.py  remotedefs.py  slidebottom.py  slidering.py  slideswitch.py  top.py
controller/: _autosave-remote.sch  esp32.kicad_sch  fp-info-cache  fp-lib-table  remote-cache.lib  remote-rescue.lib  remote.bak  remote.kicad_pcb  remote.kicad_pcb-bak  remote.kicad_prl  remote.kicad_pro  remote.kicad_sch  remote.net  remote.pro  remote.sch  remote.sch-bak  switches.bak  switches.kicad_sch  switches.sch  switches.sch-bak  sym-lib-table
esp32/: CMakeLists.txt  flash_all.sh  flash_app.sh  sdkconfig
esp32/main/: CMakeLists.txt  Kconfig.projbuild  checksum.cpp  checksum.h  console.cpp  console.h  defs.h  display.cpp  display.h  hw.cpp  hw.h  lowpass.cpp  lowpass.h  main.cpp  nvs.cpp  nvs.h  protocol.h  radio.cpp  radio.h
firmware/: Makefile  SH1106.cpp  SH1106.h  firmware.ino  protocol.h
kicad/: fp-info-cache  fp-lib-table  remote-cache.lib  remote.bak  remote.kicad_pcb  remote.net  remote.pro  remote.sch  switches.sch  sym-lib-table
mainboard/: fp-info-cache  remote-cache.lib  remote.kicad_pcb  remote.kicad_pcb-bak  remote.kicad_prl  remote.kicad_pro  remote.kicad_sch  remote.net  remote.pro  remote.sch  remote.sch-bak  switches.kicad_sch  (+1 more)
mainboard-split/: fp-info-cache  fp-lib-table  mainboard-cache.lib  mainboard.kicad_pcb  mainboard.kicad_prl  mainboard.kicad_pro  mainboard.kicad_sch  remote.kicad_pcb  remote.kicad_pro  remote.kicad_sch  sym-lib-table
(+62 files in other folders)
