idf_component_register(SRCS
                       checksum.cpp
                       console.cpp
                       display.cpp
                       format.cpp
                       hw.cpp
                       lowpass.cpp
                       main.cpp
                       nvs.cpp
                       radio.cpp
                       INCLUDE_DIRS ".")
